fix technique wrap

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1017,7 +1017,6 @@ button.transparent-btn:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
 }
 
 .technique-catalog-item__info h4 {
